fix-screen-flicker part 1

--- a/styles/cosmic.css
+++ b/styles/cosmic.css
@@ -117,7 +117,6 @@
   height: 160px;
   border: 1px solid rgba(125, 211, 252, 0.12);
   opacity: 0.28;
-  transform: translate3d(calc(var(--mx) * 28px), calc(var(--my) * 18px), 0);
   will-change: transform;
 }
 
@@ -141,7 +140,7 @@
   bottom: -170px;
   width: min(860px, 78vw);
   height: 270px;
-  transform: translate3d(calc(-50% + var(--mx) * 38px), calc(var(--my) * 18px), 0);
+  transform: translate(-50%, 0);
   border: 1px solid rgba(125, 211, 252, 0.14);
   border-bottom: 0;
   border-radius: 999px 999px 0 0;
